fix: re-introduced overflow-y property for .body-param

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -6,11 +6,6 @@
     // padding: 0 20px;
 }
 
-.body-param 
-{
-    overflow-x: scroll;
-}
-
 .opblock-tag-section 
 {
     display: flex;
@@ -320,6 +315,12 @@
         {
             padding: 0 10px 0 0;
         }
+    }
+
+    .parameters .body-param 
+    {
+        overflow-x: scroll;
+        overflow-y: auto;
     }
 }
 
